@@ -5,6 +5,7 @@ ceilometer (2013.1-4) unstable; urgency=low
   * Ran wrap-and-sort to clean debian/control.
   * Replaced pkgos_var_user_group nova by pkgos_adduser, as we don't want to
     create the log / lib dirs of nova.
+  * Creates the correct libvirt group if the package is installed in Ubuntu.
 
  -- Thomas Goirand <zigo@debian.org>  Mon, 27 May 2013 11:07:59 +0800
 
